[gd_scene load_steps=3 format=3 uid="uid://ipy0otv0ths0"]

[ext_resource type="Script" path="res://res/scripts/loadingScreen.gd" id="1_5r2vf"]
[ext_resource type="AudioStream" uid="uid://byxiybvwp27vg" path="res://res/sfx/music/loadingScreenMusic.wav" id="2_dvabt"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5r2vf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
mouse_filter = 2

[node name="Control2" type="Control" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 60.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control3" type="Control" parent="VBoxContainer2/Control2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 15.0
mouse_filter = 2

[node name="Control4" type="Control" parent="VBoxContainer2/Control2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 70.0
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer2/Control2/HBoxContainer/Control4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "We've been hired to cause a mess near the Followers of The Hand's casino. Taking out the security team will be enough. They promised us a bonus if it's \"quick and violent.\" 
Steel will drop you off as close as he can. The rest is up to you. Make your way there, and dispatch them. Once you're done, I'll get you out of there.
And be careful out there!
â€“ Copper."
autowrap_mode = 2

[node name="Control5" type="Control" parent="VBoxContainer2/Control2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 15.0
mouse_filter = 2

[node name="Control4" type="Control" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/Control4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control3" type="Control" parent="VBoxContainer2/Control4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
mouse_filter = 2

[node name="Control4" type="Control" parent="VBoxContainer2/Control4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 60.0
mouse_filter = 2

[node name="Button" type="Button" parent="VBoxContainer2/Control4/HBoxContainer/Control4"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -33.0
offset_right = 125.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 38
text = "WAKE UP"

[node name="Control5" type="Control" parent="VBoxContainer2/Control4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/Control4/HBoxContainer/Control5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="VBoxContainer2/Control4/HBoxContainer/Control5/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 90.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/Control4/HBoxContainer/Control5/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="VBoxContainer2/Control4/HBoxContainer/Control5/HBoxContainer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 40.0
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer2/Control4/HBoxContainer/Control5/HBoxContainer/Control/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.5
offset_top = -22.5
offset_right = 88.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Loading..."
horizontal_alignment = 1

[node name="Control2" type="Control" parent="VBoxContainer2/Control4/HBoxContainer/Control5/HBoxContainer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 40.0
mouse_filter = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer2/Control4/HBoxContainer/Control5/HBoxContainer/Control/VBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
step = 1.0

[node name="Control3" type="Control" parent="VBoxContainer2/Control4/HBoxContainer/Control5/HBoxContainer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
mouse_filter = 2

[node name="Control2" type="Control" parent="VBoxContainer2/Control4/HBoxContainer/Control5/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0
mouse_filter = 2

[node name="loadingMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_dvabt")
volume_db = -8.0
bus = &"MusicSFX"

[connection signal="pressed" from="VBoxContainer2/Control4/HBoxContainer/Control4/Button" to="." method="_on_button_pressed"]
